tests/NormalTests/paczka1/fuzzy1/71430897.err
Error in line 1: qXn S758 24,6
Error in line 4: 7MX S758 39,1
Error in line 2: 3ldaLbKo S758 62,4
Error in line 7: 3ldaLbKo S885 4,0
Error in line 22: lmsPMfJpHnZ S758 19,5
Error in line 3: qXn A349 26,3
Error in line 31: A349 A349 42,23
Error in line 21: A349 S885 64,7
Error in line 32: A349 S699 63,8
Error in line 33: A349 A349 56,7
